--- a/.github/workflows/static_types.yaml
+++ b/.github/workflows/static_types.yaml
@@ -11,9 +11,12 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: "3.10"
-      - name: Install Dependencies
+      - name: Install mypy
         run: |
           pip install mypy
+      - name: Build Package
+        run: |
+          pip install .
       - name: Run Checks
         run: |
           mypy tsgraph
