--- a/.github/workflows/static_types.yaml
+++ b/.github/workflows/static_types.yaml
@@ -7,10 +7,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+          cache: "pip"
       - name: Install mypy
         run: |
           pip install mypy
