--- a/.github/workflows/static_types.yaml
+++ b/.github/workflows/static_types.yaml
@@ -12,6 +12,9 @@ jobs:
         with:
           python-version: "3.10"
           cache: "pip"
+      - name: Install C Dependecies
+        run: |
+          apt install libglib2.0-dev
       - name: Install mypy
         run: |
           pip install mypy
