--- a/.github/workflows/static_types.yaml
+++ b/.github/workflows/static_types.yaml
@@ -14,7 +14,7 @@ jobs:
           cache: "pip"
       - name: Install C Dependecies
         run: |
-          apt install libglib2.0-dev
+          sudo apt install libglib2.0-dev
       - name: Install mypy
         run: |
           pip install mypy
